# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.504 2007-11-05 13:46:16 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/10/25) Improved Kernel::System::Crypt::PGP to return information about
    the PGP-keys that were actually used in Decrypt() and Verify().
 - (2007/10/25) Updated all cpan modules.
 - (2007/10/17) Added GroupLookup() and RoleLookup() to Group.pm and removed the
    two methods GetGroupIdByName() and GetRoleIdByName() which were already marked
    as deprecated.
 - (2007/10/08) Added support of ticket free text links in ticket view,
    configurable via SysConfig.
 - (2007/10/05) Added fist version of AJAX framework support in phone ticket.
 - (2007/10/01) Added <ModuleRequired Version="0.01">SomeModule</ModuleRequired>
    feature to .opm format for enforcing installed CPAN modules.
 - (2007/09/25) Fixed bug# 2312 - Wide character error in Layout.pm if system
    runs in utf-8 mode.
 - (2007/09/18) Did some improvments in Kernel/Output/HTML/Layout.pm to
    get an better performance if the block function is used many times
    (e. g. > 1000 times, 30% faster).
 - (2007/09/13) Fixed bug# 1186 - Convertion from HTML to text incomplete
    if html encoded chars like &Egrave; or &eacute; is used. Added full
    HTML to text convertion to email parser.
 - (2007/09/13) Improved report overview of perfornance log.

2.2.4 (2007/11/05)
 - (2007/11/05) Fixed small typo in the escalation notification.
 - (2007/11/05) Fixed bug# 2473 - Not able to update existing cache files of
    customer user backend because of file permission problems (cache files are
    created with 644). From now on cache files are created with 664 permissions.