@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.504 2007-11-05 13:46:16 mh Exp $
+# $Id: CHANGES,v 1.505 2007-11-06 06:53:55 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -32,7 +32,10 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.4 (2007/11/05)
- - (2007/11/05) Fixed small typo in the escalation notification.
+ - (2007/11/05) Fixed bug# 2474 - Config option UserSyncLDAPAttibuteGroupsDefination
+    and UserSyncLDAPAttibuteRolesDefination is not working.
+ - (2007/11/05) Fixed small typo in scripts/database/otrs-initial_insert.xml, for
+    escalation notification text.
  - (2007/11/05) Fixed bug# 2473 - Not able to update existing cache files of
     customer user backend because of file permission problems (cache files are
     created with 644). From now on cache files are created with 664 permissions.
